--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -44,7 +44,7 @@
   height: 271px;
   position: absolute;
   top: 120px;
-  left: 114px;
+  left: 90px;
 }
 
 .skills-row-1, .skills-row-2, .skills-row-3 {
@@ -89,7 +89,7 @@
   height: 75px;
   position: absolute;
   top: 629px;
-  left: 21%;
+  left: 26%;
   >a:hover {
     font-weight: 500;
   }
