--- a/src/app/my-skills/my-skills.media.component.scss
+++ b/src/app/my-skills/my-skills.media.component.scss
@@ -208,6 +208,7 @@
 @media screen and (max-width: 500px) {
   .my-skills-txt {
     left: -7%;
+    margin-left: 0%;
     top: 279%;
     text-align: center;
     display: flex;
@@ -256,12 +257,16 @@
   .skills-row-1 img,.skills-row-2 img,.skills-row-3 img {
     width: 23%;
   }
+  .my-skills-txt {
+    margin-left: 0%;
+  }
 }
 
 @media screen and (max-width: 400px) {
   .my-skills-txt {
     left: -1%;
     top: 275%;
+    margin-left: 2%;
   }
   .my-skills-container {
     margin-left: 1%;
@@ -277,6 +282,7 @@
 @media screen and (width: 375px) {
   .my-skills-txt {
     top: 317%;
+    margin-left: 1%;
   }
   .skills-row-1 {
     margin-left: -16%;
@@ -322,6 +328,7 @@
     left: 0%;
     top: 254%;
     width: 250px;
+    margin-left: 7%;
   }
   .my-skills-container {
     margin-left: 3%;
