--- a/src/app/shared/arrow-left-2/arrow-left-2.component.scss
+++ b/src/app/shared/arrow-left-2/arrow-left-2.component.scss
@@ -5,7 +5,7 @@
   height: 300px;
   // position: absolute;
   // top: 5967px;
-  margin-left: 10%;
+  margin-left: 13%;
   margin-top: -5%;
 }
 
