--- a/src/app/shared/arrow-left/arrow-left.component.scss
+++ b/src/app/shared/arrow-left/arrow-left.component.scss
@@ -6,8 +6,8 @@
   //position: absolute;
   //top: 1517px;
   //left: 16%;
-  margin-top: 47px;
-  margin-left: 17%;
+  margin-top: 200px;
+  margin-left: 14%;
 }
 
 /* MEDIA */
