--- a/src/app/shared/footer-content/contact-form/contact-form.media.component.scss
+++ b/src/app/shared/footer-content/contact-form/contact-form.media.component.scss
@@ -77,7 +77,7 @@
 
 @media screen and (max-width: 500px) {
   .footer-form-container {
-    margin-left: -48%;
+    margin-left: -39%;
   }
   .contactform-policy-check span {
     width: 45%;
