--- a/src/app/shared/footer-content/footer-content.media.component.scss
+++ b/src/app/shared/footer-content/footer-content.media.component.scss
@@ -161,7 +161,7 @@
     margin-left: 85%;
   }
   .footer-container {
-    height: 1171px;
+    height: 1231px;
   }
 }
 
